create slide of index

--- a/slides/index.slim
+++ b/slides/index.slim
@@ -3,7 +3,28 @@ h3.center
 	span.nonsplit Elixir(エリクサー)を学んでみよう
 h4.center
 	span.nonsplit
-		span.heading 山崎 進 &nbsp;
+		span.heading 北九州市立大学 山崎 進 &nbsp;
+		img.heading src="resources/images/ZACKY-3000.jpg"
 	span.nonsplit
-		span.heading 高瀬 英希 &nbsp;
-	img.heading30 src="resources/images/fukuokaex_logo_only_original.png"
+		span.heading 京都大学 高瀬 英希 &nbsp;
+		img.heading src="resources/images/takase.jpg"
+img.heading.center src="resources/images/fukuokaex_logo_only_original.png"
+
+p
+
+.small
+	markdown:
+		* 長らく組込みソフトウェア開発にはC言語が使われてきました
+			* 最近ではC++やmruby，MicroPython も使われてきだしています
+		* とくに**C言語やC++には不満を覚えている**人も多くいらっしゃるのではないでしょうか
+			* また，**例外処理やマルチコア対応に苦労している**方も少なくないでしょう
+p.center
+	span.strong.heading Elixir
+	span.heading &#40;エリクサー&#41; &nbsp;
+	img.heading30 src="resources/images/logo.png"
+	span.heading &nbsp; は，最近登場した新しいプログラミング言語です
+
+p.center
+	span 私たちは
+	span.strong 組込みシステム/IoT用途にElixirが使える
+	span と期待しています
