update header of slide of parallelism-1

--- a/slides/parallelism-1.slim
+++ b/slides/parallelism-1.slim
@@ -1,5 +1,5 @@
 h3
-	span.nonsplit.heading C言語 のここがダメ!!
+	span.nonsplit.heading C言語 のここがツライ。。。
 	span.nonsplit.heading その1
 h2
 	span.nonsplit.strong.heading 並列処理は一苦労
