--- a/css/source/theme.scss
+++ b/css/source/theme.scss
@@ -1,5 +1,5 @@
 /**
- * KK-SHiFT theme
+ * Elixir theme
  *
  * Copyright (C) 2017 Marii Yamada & Susumu Yamazaki
  */
@@ -21,7 +21,7 @@ $mainColor: #222;
 $headingColor: #222;
 
 $base-color: #FFFFFF;
-$main-color: #4BBDAB;
+$main-color: #33176A;
 $accent-color: #FADF4B;
 
 
@@ -47,11 +47,21 @@ section.has-light-background {
 	}
 }
 
+.reveal .slides section:before {
+  background: url(fukuoka_ex_logo_white.png) no-repeat;
+  background-size: 18px 25px;
+  content: "";
+  height: 25px;
+  left: 10px;
+  position: absolute;
+  top: -32px;
+  width: 18px;
+  z-index: 99;
+}
+
 .reveal .slides section {
 	border: solid $main-color;
-	border-width: 30px 0;
-	background-image: linear-gradient(150deg, $accent-color 100px, transparent 0),
-	linear-gradient(-30deg, $accent-color 100px, transparent 0);
+	border-width: 40px 0;
 }
 
 html {
@@ -72,6 +82,7 @@ p, .left {
 
 img {
 	border-style: none !important;
+	box-shadow: none !important;
 }
 
 span.heading {
@@ -105,8 +116,6 @@ img.icon {
 
 img.icon200 {
 	width: 200px;
-	border-style: none !important;
-	box-shadow: none !important;
 }
 
 img.image400 {
@@ -117,7 +126,6 @@ img.image400 {
 img.image {
 	width: 600px;
 	margin: 30px !important;
-	box-shadow: none !important;
 }
 
 .middle img {
