--- a/css/theme.css
+++ b/css/theme.css
@@ -1,5 +1,5 @@
 /**
- * KK-SHiFT theme
+ * Elixir theme
  *
  * Copyright (C) 2017 Marii Yamada & Susumu Yamazaki
  */
@@ -7,10 +7,20 @@
 section.has-light-background, section.has-light-background h1, section.has-light-background h2, section.has-light-background h3, section.has-light-background h4, section.has-light-background h5, section.has-light-background h6 {
   color: #fff; }
 
+.reveal .slides section:before {
+  background: url(fukuoka_ex_logo_white.png) no-repeat;
+  background-size: 18px 25px;
+  content: "";
+  height: 25px;
+  left: 10px;
+  position: absolute;
+  top: -32px;
+  width: 18px;
+  z-index: 99; }
+
 .reveal .slides section {
-  border: solid #4BBDAB;
-  border-width: 30px 0;
-  background-image: linear-gradient(150deg, #FADF4B 100px, transparent 0), linear-gradient(-30deg, #FADF4B 100px, transparent 0); }
+  border: solid #33176A;
+  border-width: 40px 0; }
 
 html {
   background-color: #fff !important; }
@@ -25,7 +35,8 @@ p, .left {
   font-weight: bold !important; }
 
 img {
-  border-style: none !important; }
+  border-style: none !important;
+  box-shadow: none !important; }
 
 span.heading {
   vertical-align: middle; }
@@ -51,9 +62,7 @@ img.icon {
   margin: 30px !important; }
 
 img.icon200 {
-  width: 200px;
-  border-style: none !important;
-  box-shadow: none !important; }
+  width: 200px; }
 
 img.image400 {
   width: 400px;
@@ -61,8 +70,7 @@ img.image400 {
 
 img.image {
   width: 600px;
-  margin: 30px !important;
-  box-shadow: none !important; }
+  margin: 30px !important; }
 
 .middle img {
   vertical-align: middle; }
