create slide of embedded and update title of embedded

--- a/slides/micro-elixir-1.slim
+++ b/slides/micro-elixir-1.slim
@@ -10,7 +10,7 @@ p.center.small
 	markdown:		
 		* 最適化しやすいように言語仕様をチューニング
 		* LLVM を拡張した Polymorphic LLVM によるインラインアセンブリコード記述
-		* 組込み/IoT用途: 省メモリ，ハードリアルタイム
+		* 組込み/IoT用途: 省メモリ，互換性，ハードリアルタイム
 		* ネイティブなコールバック方式のマルチタスク機構 Sabotender
 		* アノテーションによるマルチコアCPU/GPU活用 Hastega
 		* 高耐障害性のプロセス独立メモリ管理機構
