add description to slide of responsibility-1

--- a/slides/responsibility-1.slim
+++ b/slides/responsibility-1.slim
@@ -7,3 +7,14 @@
 	h2
 		span.nonsplit.strong.heading Ruby on Railsと同等以上の生産性で，
 		span.nonsplit.strong.heading 驚異の高レスポンス性能を誇るPhoenix
+.small
+	markdown:
+		* Elixir の作者の José Valim は Ruby on Rails のコアコミッター
+			* Elixir の文法やエコシステムは Ruby の影響を受けている
+			* Phoenix も同様に Ruby on Rails の影響を受けている
+			* つまり Phoenix は Ruby on Rails と少なくとも同等の生産性を誇る
+			* Ruby や Rails にない洗練された機能を有するので同等以上かもしれない
+		* Elixir は Erlang VM で動作する
+			* Elixir は Erlang の高い並列性と耐障害性を受け継ぐ
+			* Phoenix は Elixir の性能を存分に発揮するように設計されている
+		* Phoenix の WebSocket は他の追従を許さない高速性・高レスポンス性を誇る
